<resources>
    <string name="app_name">My Offers</string>
    <string name="copyright">Battista Software @ 2016</string>
    <string name="btn_start">Entre!!!</string>
    <string name="label_product">Produto:</string>
    <string name="label_name_product">Nome:</string>
    <string name="label_category">Categoria:</string>
    <string name="label_vendor">Fornecedor/Loja:</string>
    <string name="label_brand">Marca:</string>
    <string name="label_price">Preço (R$):</string>
    <string name="label_updated_at">Atualizado em:</string>
    <string name="label_average_price">*¹Preço médio (R$):</string>
    <string name="label_desc_price">*¹O preço médio é calculado com base no histórico de preço do produto.</string>
    <string name="label_desc_edit_product">*Use o botão EDITAR para quando existir divergência de informação ou imagem. Bem como acrescentar um novo preço para o fornecedor.</string>
    <string name="label_desc_img_product">*Você pode adicionar uma foto do produto ou uma imagem da internet.</string>
    <string name="label_desc_add_product">*Para adicionar/editar um produto você precisa está conectado a internet.</string>
    <string name="label_desc_request_revise">*Use a opção "Solictar revisão" para quando as informações ou imagem do produto estão divergentes.</string>
    <string name="label_last_products">Últimos produtos</string>
    <string-array name="categories_array">
        <item>Alimentos e Bebidas</item>
        <item>Automóveis</item>
        <item>Casa</item>
        <item>Diversos</item>
        <item>Eletrônicos</item>
        <item>Esporte e Lazer</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_button_add">Add</string>
    <string name="label_button_save">Save</string>
    <string name="label_button_cancel">Cancelar</string>
    <string name="label_button_edit">Editar</string>
    <string name="hint_product_price">Preço R$</string>
    <string name="hint_name_vendor">Novo Fornecedor/Loja</string>
    <string name="label_request_revise">*Solicitar revisão!</string>

</resources>
