<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BodyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.battista.myoffers.EditProductActivity">

    <fragment
        android:id="@+id/fgmMainToolbar"
        android:name="br.com.battista.myoffers.view.fragments.ToolbarFragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:layout="@layout/fragment_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:labelFor="@+id/lblCodeProduct"
                    android:text="@string/label_product"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblCodeProduct"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="13dp"
                    android:layout_weight="1"
                    android:text="7793100111143"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/txtNameProduct"
                    android:text="@string/label_name_product"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txtNameProduct"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textAutoComplete"
                    android:maxLength="50" />

            </LinearLayout>

            <TableLayout
                android:id="@+id/tblProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <ImageButton
                            android:id="@+id/btnAddImgProduct"
                            android:layout_width="fill_parent"
                            android:layout_height="150dp"
                            android:layout_margin="3dp"
                            android:elevation="5dp"
                            android:padding="3dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/new_product" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/spnCategory"
                            android:text="@string/label_category"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/spnCategory"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/txtBrand"
                            android:text="@string/label_brand"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtBrand"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textAutoComplete"
                            android:maxLength="30" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/txtVendor"
                            android:text="@string/label_vendor"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtVendor"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textAutoComplete"
                            android:maxLength="30" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/txtPrice"
                            android:text="@string/label_price"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtPrice"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </LinearLayout>

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_desc_img_product"
                android:textSize="11sp"
                android:textStyle="italic" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true">

            <Button
                style="@style/ButtonAction"
                android:layout_marginLeft="8dp"
                android:onClick="cancelEditProduct"
                android:drawableLeft="@drawable/btn_remove_product"
                android:text="@string/label_button_cancel" />

            <View
                android:layout_width="4dp"
                android:layout_height="wrap_content" />

            <Button
                style="@style/ButtonAction"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@drawable/btn_add_product"
                android:text="@string/label_button_add" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
