<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BodyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.battista.myoffers.ProductActivity">

    <fragment
        android:id="@+id/fgmMainToolbar"
        android:name="br.com.battista.myoffers.view.fragments.ToolbarFragment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        tools:layout="@layout/fragment_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lblProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:labelFor="@+id/lblCodeProduct"
                    android:text="@string/label_product"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblCodeProduct"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="13dp"
                    android:layout_weight="1"
                    android:text="7793100111143"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/lblNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimaryDark"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="Caneca Java"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/tblProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imgProduct"
                            android:layout_width="fill_parent"
                            android:layout_height="150dp"
                            android:layout_margin="3dp"
                            android:elevation="5dp"
                            android:padding="3dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/new_product" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:padding="3dp">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/lblCategory"
                            android:text="@string/label_category"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lblCategory"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="Casa" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/lblBrand"
                            android:text="@string/label_brand"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lblBrand"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="Caneca" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/lblVendor"
                            android:text="@string/label_vendor"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lblVendor"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="Nerd Store" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/lblUpdatedAt"
                            android:text="@string/label_updated_at"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lblUpdatedAt"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="20/04/2016 18:20" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorPrimaryDark" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:labelFor="@+id/lblAveragePrice"
                            android:text="@string/label_average_price"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/lblAveragePrice"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="30.00" />

                    </LinearLayout>

                </TableRow>

            </TableLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_desc_price"
                android:textSize="11sp"
                android:textStyle="italic" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true">

            <Button
                style="@style/ButtonAction"
                android:layout_marginLeft="8dp"
                android:onClick="cancelViewProduct"
                android:drawableLeft="@drawable/btn_remove_product"
                android:text="@string/label_button_cancel" />

            <View
                android:layout_width="4dp"
                android:layout_height="wrap_content" />

            <Button
                style="@style/ButtonAction"
                android:layout_marginLeft="8dp"
                android:drawableLeft="@drawable/btn_edit_product"
                android:text="@string/label_button_edit" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>